overflow issue fix

--- a/styles/sass/partials/_baseSyles.scss
+++ b/styles/sass/partials/_baseSyles.scss
@@ -2,6 +2,10 @@ html {
     scroll-behavior: smooth;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 img {
     max-width: 100%;
     display: block;
