--- a/styles/style.css
+++ b/styles/style.css
@@ -490,6 +490,10 @@ html {
   scroll-behavior: smooth;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 img {
   max-width: 100%;
   display: block;
